[package]
name = "nws-api-producer"
version = "0.1.0"
authors = ["Rob Hurkes <rhurkes@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
regex = "1"
reqwest = "0.9"
rdkafka = "0.17.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
slog = "2.4"
slog-async = "2.3"
slog-term = "2.4"
toml = "0.4"
