[package]
name = "nws-api-loader"
version = "0.1.0"
authors = ["Rob Hurkes <rhurkes@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.0"
regex = "1"
reqwest = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
slog = "2.4"
slog-async = "2.3"
slog-term = "2.4"
toml = "0.4"
# wx = { git = "https://github.com/rhurkes/wx_shared" }
wx = { path = "../wx_shared", version = "0.1.5" }
